--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
   <nav role="navigation" aria-label="Main navigation">
     <div class="brand" style="gap:12px;">
       <div class="logo" aria-hidden="true">
-        <img src="https://github.com/samanthahere/samantha-portfolio/blob/main/4AFDF179-164A-45F3-A9FC-0101C4F2027B.jpeg.jpeg" alt="Samantha logo thumbnail">
+        <img src="images.zip/4AFDF179-164A-45F3-A9FC-0101C4F2027B.jpeg.jpeg" alt="Samantha logo thumbnail">
       </div>
       <h4>Samantha</h4>
     </div>
